<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="Save"
                    android:textColor="@color/txt_black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#797C77"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textColor="@color/txt_black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/img_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/dodger_blue"
                android:textSize="14sp"
                tools:text="www.efjwoijdfowliddslihflsdlfnsdlcln"/>

            <EditText
                android:id="@+id/input_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name"/>

            <EditText
                android:id="@+id/input_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author"/>

            <EditText
                android:id="@+id/input_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/input_publish_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publish_year"
                android:inputType="number"
                android:maxLength="4"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/save"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>